Add external config file
Can be specified by --config/-c <path-to-config.yml>. Must be yml and
contain keys: CF_API_TOKEN, ZONE_ID, and RECORD_NAME.

Dockerfile now expects a mounted directory at /configs where config.yml
must exist. To use the docker image, create a directory with a
config.yml in it, then volume mount the directory to /configs (e.g., -v
<dir>:/configs)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cf-dyndns"
 dynamic = ["version"]
 description = "Dynamic DNS client for Cloudflare"
 readme = "README.md"
-dependencies = ["requests", "python-dotenv"]
+dependencies = ["requests", "pyyaml"]
 license = {file = "LICENSE"}
 
 [project.scripts]
